# MatchmakingAndLobbyService

./: README.md
LobbyAndMatchmaking/: CMakeLists.txt
LobbyAndMatchmaking/LobbyAndMatchmaking/: LobbyAndMatchmaking.cpp  LobbyAndMatchmaking.vcxproj  Message.cpp  Types.h
LobbyAndMatchmaking/LobbyAndMatchmaking/x64/Debug/: LobbyAndMatchmaking.exe.recipe  LobbyAndMatchmaking.ilk  vc143.idb
LobbyAndMatchmaking/LobbyAndMatchmaking/x64/Debug/LobbyAnd.ea3bc684.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LobbyAndMatchmaking.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LobbyAndMatchmaking/lobby-matchmaking/: CMakeLists.txt  Client.cpp  Client.h  Lobby.cpp  Lobby.h  LobbyAndMatchmaking.cpp  LobbyAndMatchmaking.vcxproj.filters  LobbyManager.cpp  LobbyManager.h  LobbyServer.cpp  LobbyServer.h  Matchmaking.cpp  Matchmaking.h  Message.h  Player.h  Scoring.cpp  Scoring.h  Session.cpp  Session.h  Types.h  tests.cpp
